--- a/po/g4music.pot
+++ b/po/g4music.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-05 23:37+0800\n"
+"POT-Creation-Date: 2023-07-06 08:10+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -202,7 +202,7 @@ msgid "By Artist"
 msgstr ""
 
 #: src/gtk/store-panel.ui:113
-msgid "By Artist:Album"
+msgid "By Artist/Album"
 msgstr ""
 
 #: src/gtk/store-panel.ui:118
