--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-23 11:11+0800\n"
-"PO-Revision-Date: 2023-07-23 11:12+0800\n"
+"POT-Creation-Date: 2023-07-23 11:41+0800\n"
+"PO-Revision-Date: 2023-07-23 11:41+0800\n"
 "Last-Translator: Nanling <neithern@outlook.com>\n"
 "Language-Team: Chinese - China <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
@@ -21,8 +21,8 @@ msgstr ""
 "X-Generator: Gtranslator 45.alpha0\n"
 
 #: data/app.desktop.in:3 src/application.vala:203 src/main.vala:24
-msgid "G4Music"
-msgstr "G4音乐"
+msgid "Gapless"
+msgstr "无间音乐"
 
 #: data/app.desktop.in:4
 msgid "Music Player"
