--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,14 +3,14 @@
 # Copyright (C) 2022 THE g4music'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the g package.
 # Alen <neithern@outlook.com>, 2022.
-# Nanling <neithern@outlook.com>, 2023.
+# Nanling <neithern@outlook.com>, 2023-2024.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-20 17:08+0800\n"
-"PO-Revision-Date: 2023-08-19 12:12+0800\n"
+"POT-Creation-Date: 2024-08-25 18:03+0800\n"
+"PO-Revision-Date: 2024-08-25 17:55+0800\n"
 "Last-Translator: Nanling <neithern@outlook.com>\n"
 "Language-Team: Chinese - China <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
@@ -18,11 +18,104 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"X-Generator: Gtranslator 45.alpha0\n"
+"X-Generator: Gtranslator 46.1\n"
 
-#: data/app.desktop.in:3 src/application.vala:237 src/main.vala:24
+#: data/app.appdata.xml.in:4 data/app.desktop.in:3 src/application.vala:236
+#: src/main.vala:24
 msgid "Gapless"
 msgstr "无缺音乐"
+
+#: data/app.appdata.xml.in:7
+msgid "Play your music elegantly"
+msgstr "优雅地播放您的音乐"
+
+#: data/app.appdata.xml.in:20
+msgid ""
+"Gapless (AKA: G4Music) is a light weight music player written in GTK4, "
+"focuses on large music collection."
+msgstr ""
+"无缺音乐 (又名：G4Music) 是一款用 GTK4 编写的轻量级音乐播放器，专注于大型音乐"
+"收藏。"
+
+#: data/app.appdata.xml.in:21
+msgid "Features"
+msgstr "特点"
+
+#: data/app.appdata.xml.in:23
+msgid ""
+"Supports most music file types, Samba and any other remote protocols "
+"(depends on GIO and GStreamer)."
+msgstr ""
+"支持大多数音乐文件类型、Samba 和任何其他远程协议（取决于 GIO 和 GStreamer）。"
+
+#: data/app.appdata.xml.in:24
+msgid ""
+"Fast loading and parsing thousands of music files in very few seconds, "
+"monitor local changes."
+msgstr "在数秒内快速加载和解析数千个音乐文件，监控本地变化。"
+
+#: data/app.appdata.xml.in:25
+msgid ""
+"Low memory usage for large music collection with album covers (embedded and "
+"external), no thumbnail caches to store."
+msgstr ""
+"对于带有专辑封面（嵌入式和外置式）的大型音乐收藏，内存使用率低，无需存储缩略"
+"图缓存。"
+
+#: data/app.appdata.xml.in:26
+msgid ""
+"Group and sorts by album/artist/title, shuffle list, full-text searching."
+msgstr "按专辑/艺术家/标题分组和排序、随机播放列表、全文搜索。"
+
+#: data/app.appdata.xml.in:27
+msgid ""
+"Fluent adaptive user interface for different screen (Desktop, Tablet, "
+"Mobile)."
+msgstr "针对不同屏幕（台式机、平板电脑、手机）的流畅自适应用户界面。"
+
+#: data/app.appdata.xml.in:28
+msgid "Gaussian blurred cover as background, follows GNOME light/dark mode."
+msgstr "高斯模糊封面作为背景，遵循 GNOME 明暗模式。"
+
+#: data/app.appdata.xml.in:29
+msgid "Drag-drop from GNOME Files, showing music in Files."
+msgstr "从 GNOME 文件中拖放、显示文件中的音乐。"
+
+#: data/app.appdata.xml.in:30
+msgid "Supports audio peaks visualizer."
+msgstr "支持音频峰值可视化。"
+
+#: data/app.appdata.xml.in:31
+msgid "Supports gapless playback."
+msgstr "支持无间隙播放。"
+
+#: data/app.appdata.xml.in:32
+msgid "Supports normalizing volume with ReplayGain."
+msgstr "支持通过 ReplayGain 实现音量平衡。"
+
+#: data/app.appdata.xml.in:33
+msgid "Supports PipeWire and other audio sink."
+msgstr "支持 "
+
+#: data/app.appdata.xml.in:34
+msgid "Supports MPRIS control."
+msgstr "支持 MPRIS 控制。"
+
+#: data/app.appdata.xml.in:45
+msgid "Main window"
+msgstr "主窗口"
+
+#: data/app.appdata.xml.in:49
+msgid "Albums view"
+msgstr "专辑视图"
+
+#: data/app.appdata.xml.in:53
+msgid "Playing view"
+msgstr "正在播放视图"
+
+#: data/app.appdata.xml.in:57
+msgid "Playlist view"
+msgstr "播放列表视图"
 
 #: data/app.desktop.in:4
 msgid "Music Player"
@@ -97,7 +190,7 @@ msgctxt "shortcut window"
 msgid "Reload Library"
 msgstr "重载曲库"
 
-#: src/gtk/play-panel.ui:16 src/ui/store-panel.vala:350
+#: src/gtk/play-panel.ui:16 src/ui/store-panel.vala:358
 msgid "Back"
 msgstr "返回"
 
@@ -121,7 +214,7 @@ msgstr "紧凑播放列表"
 msgid "Grid view for artists/albums"
 msgstr "艺术家/专辑使用网格视图"
 
-#: src/gtk/preferences.ui:56 src/application.vala:428
+#: src/gtk/preferences.ui:56 src/application.vala:400
 msgid "Keep playing after window closed"
 msgstr "关闭窗口后继续播放"
 
@@ -185,43 +278,43 @@ msgstr "搜索"
 msgid "Sort By"
 msgstr "排序"
 
-#: src/gtk/store-panel.ui:73
+#: src/gtk/store-panel.ui:59
 msgid "_Reload Library"
 msgstr "重载曲库(_R)"
 
-#: src/gtk/store-panel.ui:79
+#: src/gtk/store-panel.ui:65
 msgid "_Preferences"
 msgstr "首选项(_P)"
 
-#: src/gtk/store-panel.ui:83
+#: src/gtk/store-panel.ui:69
 msgid "_Keyboard Shortcuts"
 msgstr "快捷键(_K)"
 
-#: src/gtk/store-panel.ui:87
+#: src/gtk/store-panel.ui:73
 msgid "_About"
 msgstr "关于(_A)"
 
-#: src/gtk/store-panel.ui:96 src/ui/preferences.vala:67
+#: src/gtk/store-panel.ui:82 src/ui/preferences.vala:67
 msgid "Album"
 msgstr "专辑"
 
-#: src/gtk/store-panel.ui:101
+#: src/gtk/store-panel.ui:87
 msgid "Artist"
 msgstr "艺术家"
 
-#: src/gtk/store-panel.ui:106
+#: src/gtk/store-panel.ui:92
 msgid "Artist/Album"
 msgstr "艺术家/专辑"
 
-#: src/gtk/store-panel.ui:111
+#: src/gtk/store-panel.ui:97
 msgid "Title"
 msgstr "标题"
 
-#: src/gtk/store-panel.ui:116
+#: src/gtk/store-panel.ui:102
 msgid "Recent"
 msgstr "最近"
 
-#: src/gtk/store-panel.ui:121
+#: src/gtk/store-panel.ui:107
 msgid "Shuffle"
 msgstr "乱序"
 
@@ -234,7 +327,7 @@ msgstr "一个快速、流畅、轻量的，基于GTK4的音乐播放软件。"
 msgid "translator-credits"
 msgstr "Nanling"
 
-#: src/application.vala:625
+#: src/application.vala:602
 msgid "Keep playing"
 msgstr "持续播放"
 
@@ -245,15 +338,15 @@ msgid "Play at Next"
 msgstr "插播"
 
 #: src/ui/music-widgets.vala:212 src/ui/music-widgets.vala:251
-#: src/ui/music-widgets.vala:261 src/ui/store-panel.vala:355
+#: src/ui/music-widgets.vala:261 src/ui/store-panel.vala:363
 msgid "Play"
 msgstr "播放"
 
-#: src/ui/music-widgets.vala:215 src/ui/play-panel.vala:130
+#: src/ui/music-widgets.vala:215 src/ui/play-panel.vala:125
 msgid "Show _Cover File"
 msgstr "显示封面文件(_C)"
 
-#: src/ui/music-widgets.vala:217 src/ui/play-panel.vala:132
+#: src/ui/music-widgets.vala:217 src/ui/play-panel.vala:127
 msgid "_Export Cover"
 msgstr "导出封面(_E)"
 
@@ -261,15 +354,15 @@ msgstr "导出封面(_E)"
 msgid "Show List File"
 msgstr "显示列表文件"
 
-#: src/ui/music-widgets.vala:268 src/ui/play-panel.vala:61
+#: src/ui/music-widgets.vala:268 src/ui/play-panel.vala:59
 msgid "Search Title"
 msgstr "搜索标题"
 
-#: src/ui/music-widgets.vala:269 src/ui/play-panel.vala:59
+#: src/ui/music-widgets.vala:269 src/ui/play-panel.vala:57
 msgid "Search Album"
 msgstr "搜索专辑"
 
-#: src/ui/music-widgets.vala:270 src/ui/play-panel.vala:60
+#: src/ui/music-widgets.vala:270 src/ui/play-panel.vala:58
 msgid "Search Artist"
 msgstr "搜索艺术家"
 
@@ -295,7 +388,7 @@ msgstr "播放/暂停"
 msgid "Play Next"
 msgstr "播放下一首"
 
-#: src/ui/play-panel.vala:285
+#: src/ui/play-panel.vala:246
 msgid ""
 "Drag and drop music files here,\n"
 "or change music location: "
@@ -319,19 +412,19 @@ msgstr "仅封面"
 msgid "Track"
 msgstr "曲目"
 
-#: src/ui/store-panel.vala:75
+#: src/ui/store-panel.vala:71
 msgid "Playing"
 msgstr "正在播放"
 
-#: src/ui/store-panel.vala:80
+#: src/ui/store-panel.vala:75
 msgid "Artists"
 msgstr "艺术家"
 
-#: src/ui/store-panel.vala:85
+#: src/ui/store-panel.vala:79
 msgid "Albums"
 msgstr "专辑"
 
-#: src/ui/store-panel.vala:384
+#: src/ui/store-panel.vala:402
 msgid "Playlists"
 msgstr "播放列表"
 
