--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3,14 +3,14 @@
 # Copyright (C) 2022 THE g4music'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the g package.
 # Julian <s9209122222@gmail.com>, 2022.
-# Nanling <neithern@outlook.com>, 2023.
+# Nanling <neithern@outlook.com>, 2023-2024.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-20 17:08+0800\n"
-"PO-Revision-Date: 2023-08-19 12:12+0800\n"
+"POT-Creation-Date: 2024-08-25 18:03+0800\n"
+"PO-Revision-Date: 2024-08-25 18:02+0800\n"
 "Last-Translator: Nanling <neithern@outlook.com>\n"
 "Language-Team: Chinese - China <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
@@ -18,11 +18,106 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"X-Generator: Gtranslator 45.alpha0\n"
+"X-Generator: Gtranslator 46.1\n"
 
-#: data/app.desktop.in:3 src/application.vala:237 src/main.vala:24
+#: data/app.appdata.xml.in:4 data/app.desktop.in:3 src/application.vala:236
+#: src/main.vala:24
 msgid "Gapless"
 msgstr "無缺音樂"
+
+#: data/app.appdata.xml.in:7
+msgid "Play your music elegantly"
+msgstr "優雅地播放您的音樂"
+
+#: data/app.appdata.xml.in:20
+msgid ""
+"Gapless (AKA: G4Music) is a light weight music player written in GTK4, "
+"focuses on large music collection."
+msgstr ""
+"無缺音樂 (又名: G4Music) 是以 GTK4 寫成的輕量級音樂播放器，專注於大型音樂收"
+"藏。"
+
+#: data/app.appdata.xml.in:21
+msgid "Features"
+msgstr "特點"
+
+#: data/app.appdata.xml.in:23
+msgid ""
+"Supports most music file types, Samba and any other remote protocols "
+"(depends on GIO and GStreamer)."
+msgstr ""
+"支援大多數音樂檔案類型、Samba 及任何其他遠端通訊協定 (取決於 GIO 及 "
+"GStreamer)。"
+
+#: data/app.appdata.xml.in:24
+msgid ""
+"Fast loading and parsing thousands of music files in very few seconds, "
+"monitor local changes."
+msgstr "在幾秒鐘內快速載入和解析數以千計的音樂檔案，監控本機變更。"
+
+#: data/app.appdata.xml.in:25
+msgid ""
+"Low memory usage for large music collection with album covers (embedded and "
+"external), no thumbnail caches to store."
+msgstr ""
+"對於包含專輯封面 (內嵌與外接) 的大型音樂收藏，記憶體使用量低，無須儲存縮圖快"
+"取。"
+
+#: data/app.appdata.xml.in:26
+msgid ""
+"Group and sorts by album/artist/title, shuffle list, full-text searching."
+msgstr "依專輯/歌手/標題分類與排序、隨機播放清單、全文檢索。"
+
+#: data/app.appdata.xml.in:27
+msgid ""
+"Fluent adaptive user interface for different screen (Desktop, Tablet, "
+"Mobile)."
+msgstr ""
+"適用於不同螢幕 (桌上型電腦、平板電腦、行動裝置) 的流暢自適應使用者介面。"
+
+#: data/app.appdata.xml.in:28
+msgid "Gaussian blurred cover as background, follows GNOME light/dark mode."
+msgstr "高斯模糊封面作為背景，遵循 GNOME 明暗模式。"
+
+#: data/app.appdata.xml.in:29
+msgid "Drag-drop from GNOME Files, showing music in Files."
+msgstr "從 GNOME 檔案拖放、顯示檔案中的音樂。"
+
+#: data/app.appdata.xml.in:30
+msgid "Supports audio peaks visualizer."
+msgstr "支援音訊峰值顯示器。"
+
+#: data/app.appdata.xml.in:31
+msgid "Supports gapless playback."
+msgstr "支援無間隙播放。"
+
+#: data/app.appdata.xml.in:32
+msgid "Supports normalizing volume with ReplayGain."
+msgstr "支援使用 ReplayGain 將音量正常化。"
+
+#: data/app.appdata.xml.in:33
+msgid "Supports PipeWire and other audio sink."
+msgstr "支援 PipeWire 和其它音訊匯流排。"
+
+#: data/app.appdata.xml.in:34
+msgid "Supports MPRIS control."
+msgstr "支援 MPRIS 控制。"
+
+#: data/app.appdata.xml.in:45
+msgid "Main window"
+msgstr "主視窗"
+
+#: data/app.appdata.xml.in:49
+msgid "Albums view"
+msgstr "專輯檢視"
+
+#: data/app.appdata.xml.in:53
+msgid "Playing view"
+msgstr "正在播放檢視"
+
+#: data/app.appdata.xml.in:57
+msgid "Playlist view"
+msgstr "播放清單檢視"
 
 #: data/app.desktop.in:4
 msgid "Music Player"
@@ -97,7 +192,7 @@ msgctxt "shortcut window"
 msgid "Reload Library"
 msgstr "更新音樂庫"
 
-#: src/gtk/play-panel.ui:16 src/ui/store-panel.vala:350
+#: src/gtk/play-panel.ui:16 src/ui/store-panel.vala:358
 msgid "Back"
 msgstr "返回"
 
@@ -121,7 +216,7 @@ msgstr "緊湊播放列表"
 msgid "Grid view for artists/albums"
 msgstr "藝術家/專輯使用網格檢視"
 
-#: src/gtk/preferences.ui:56 src/application.vala:428
+#: src/gtk/preferences.ui:56 src/application.vala:400
 msgid "Keep playing after window closed"
 msgstr "關閉視窗後繼續播放"
 
@@ -171,7 +266,7 @@ msgstr "使用 ReplayGain 正規化音量"
 
 #: src/gtk/preferences.ui:164
 msgid "Prefer audio sink of GStreamer"
-msgstr "首選音訊輸出"
+msgstr "首選音訊匯流排"
 
 #: src/gtk/store-panel.ui:22
 msgid "Main Menu"
@@ -185,43 +280,43 @@ msgstr "搜尋"
 msgid "Sort By"
 msgstr "排序"
 
-#: src/gtk/store-panel.ui:73
+#: src/gtk/store-panel.ui:59
 msgid "_Reload Library"
 msgstr "更新音樂庫(_R)"
 
-#: src/gtk/store-panel.ui:79
+#: src/gtk/store-panel.ui:65
 msgid "_Preferences"
 msgstr "偏好設定(_P)"
 
-#: src/gtk/store-panel.ui:83
+#: src/gtk/store-panel.ui:69
 msgid "_Keyboard Shortcuts"
 msgstr "快捷鍵(_K)"
 
-#: src/gtk/store-panel.ui:87
+#: src/gtk/store-panel.ui:73
 msgid "_About"
 msgstr "關於(_A)"
 
-#: src/gtk/store-panel.ui:96 src/ui/preferences.vala:67
+#: src/gtk/store-panel.ui:82 src/ui/preferences.vala:67
 msgid "Album"
 msgstr "專輯"
 
-#: src/gtk/store-panel.ui:101
+#: src/gtk/store-panel.ui:87
 msgid "Artist"
 msgstr "藝術家"
 
-#: src/gtk/store-panel.ui:106
+#: src/gtk/store-panel.ui:92
 msgid "Artist/Album"
 msgstr "藝術家/專輯"
 
-#: src/gtk/store-panel.ui:111
+#: src/gtk/store-panel.ui:97
 msgid "Title"
 msgstr "歌名"
 
-#: src/gtk/store-panel.ui:116
+#: src/gtk/store-panel.ui:102
 msgid "Recent"
 msgstr "最近"
 
-#: src/gtk/store-panel.ui:121
+#: src/gtk/store-panel.ui:107
 msgid "Shuffle"
 msgstr "亂序播放"
 
@@ -236,7 +331,7 @@ msgstr ""
 "Julian\n"
 "Nanling"
 
-#: src/application.vala:625
+#: src/application.vala:602
 msgid "Keep playing"
 msgstr "持續播放"
 
@@ -247,15 +342,15 @@ msgid "Play at Next"
 msgstr "插播"
 
 #: src/ui/music-widgets.vala:212 src/ui/music-widgets.vala:251
-#: src/ui/music-widgets.vala:261 src/ui/store-panel.vala:355
+#: src/ui/music-widgets.vala:261 src/ui/store-panel.vala:363
 msgid "Play"
 msgstr "播放"
 
-#: src/ui/music-widgets.vala:215 src/ui/play-panel.vala:130
+#: src/ui/music-widgets.vala:215 src/ui/play-panel.vala:125
 msgid "Show _Cover File"
 msgstr "顯示封面檔案(_C)"
 
-#: src/ui/music-widgets.vala:217 src/ui/play-panel.vala:132
+#: src/ui/music-widgets.vala:217 src/ui/play-panel.vala:127
 msgid "_Export Cover"
 msgstr "輸出封面(_E)"
 
@@ -263,15 +358,15 @@ msgstr "輸出封面(_E)"
 msgid "Show List File"
 msgstr "顯示清單檔案"
 
-#: src/ui/music-widgets.vala:268 src/ui/play-panel.vala:61
+#: src/ui/music-widgets.vala:268 src/ui/play-panel.vala:59
 msgid "Search Title"
 msgstr "搜尋歌名"
 
-#: src/ui/music-widgets.vala:269 src/ui/play-panel.vala:59
+#: src/ui/music-widgets.vala:269 src/ui/play-panel.vala:57
 msgid "Search Album"
 msgstr "搜尋專輯"
 
-#: src/ui/music-widgets.vala:270 src/ui/play-panel.vala:60
+#: src/ui/music-widgets.vala:270 src/ui/play-panel.vala:58
 msgid "Search Artist"
 msgstr "搜尋藝術家"
 
@@ -297,7 +392,7 @@ msgstr "播放/暫停"
 msgid "Play Next"
 msgstr "播放下一首"
 
-#: src/ui/play-panel.vala:285
+#: src/ui/play-panel.vala:246
 msgid ""
 "Drag and drop music files here,\n"
 "or change music location: "
@@ -321,19 +416,19 @@ msgstr "僅封面"
 msgid "Track"
 msgstr "曲目"
 
-#: src/ui/store-panel.vala:75
+#: src/ui/store-panel.vala:71
 msgid "Playing"
 msgstr "正在播放"
 
-#: src/ui/store-panel.vala:80
+#: src/ui/store-panel.vala:75
 msgid "Artists"
 msgstr "藝術家"
 
-#: src/ui/store-panel.vala:85
+#: src/ui/store-panel.vala:79
 msgid "Albums"
 msgstr "專輯"
 
-#: src/ui/store-panel.vala:384
+#: src/ui/store-panel.vala:402
 msgid "Playlists"
 msgstr "播放清單"
 
