change the app's Chinese name for metainfo

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-08-28 07:20+0800\n"
-"PO-Revision-Date: 2024-08-28 11:23+0800\n"
+"PO-Revision-Date: 2024-08-28 23:17+0800\n"
 "Last-Translator: Nanling <neithern@outlook.com>\n"
 "Language-Team: Chinese - China <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
@@ -34,8 +34,8 @@ msgid ""
 "Gapless (AKA: G4Music) is a light weight music player written in GTK4, "
 "focuses on large music collection."
 msgstr ""
-"无缺音乐 (又名：G4Music) 是一款用 GTK4 编写的轻量级音乐播放器，专注于大型音乐"
-"收藏。"
+"无暇 (又名：G4Music) 是一款用 GTK4 编写的轻量级音乐播放器，专注于大型音乐收"
+"藏。"
 
 #: data/app.appdata.xml.in:23
 msgid "Features"
