--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-08-28 07:20+0800\n"
-"PO-Revision-Date: 2024-08-28 11:24+0800\n"
+"PO-Revision-Date: 2024-08-28 23:18+0800\n"
 "Last-Translator: Nanling <neithern@outlook.com>\n"
 "Language-Team: Chinese - China <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
@@ -34,8 +34,7 @@ msgid ""
 "Gapless (AKA: G4Music) is a light weight music player written in GTK4, "
 "focuses on large music collection."
 msgstr ""
-"無缺音樂 (又名: G4Music) 是以 GTK4 寫成的輕量級音樂播放器，專注於大型音樂收"
-"藏。"
+"無暇 (又名: G4Music) 是以 GTK4 寫成的輕量級音樂播放器，專注於大型音樂收藏。"
 
 #: data/app.appdata.xml.in:23
 msgid "Features"
