--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-08-28 07:20+0800\n"
-"PO-Revision-Date: 2024-08-28 23:18+0800\n"
+"POT-Creation-Date: 2024-09-28 12:17+0800\n"
+"PO-Revision-Date: 2024-09-28 12:25+0800\n"
 "Last-Translator: Nanling <neithern@outlook.com>\n"
 "Language-Team: Chinese - China <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
@@ -20,103 +20,10 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0\n"
 "X-Generator: Gtranslator 46.1\n"
 
-#: data/app.appdata.xml.in:4 data/app.desktop.in:3 src/application.vala:236
+#: data/app.desktop.in:3 data/app.metainfo.xml.in:4 src/application.vala:245
 #: src/main.vala:24
 msgid "Gapless"
 msgstr "無暇"
-
-#: data/app.appdata.xml.in:7
-msgid "Play your music elegantly"
-msgstr "優雅地播放您的音樂"
-
-#: data/app.appdata.xml.in:22
-msgid ""
-"Gapless (AKA: G4Music) is a light weight music player written in GTK4, "
-"focuses on large music collection."
-msgstr ""
-"無暇 (又名: G4Music) 是以 GTK4 寫成的輕量級音樂播放器，專注於大型音樂收藏。"
-
-#: data/app.appdata.xml.in:23
-msgid "Features"
-msgstr "特點"
-
-#: data/app.appdata.xml.in:25
-msgid ""
-"Supports most music file types, Samba and any other remote protocols "
-"(depends on GIO and GStreamer)."
-msgstr ""
-"支援大多數音樂檔案類型、Samba 及任何其他遠端通訊協定 (取決於 GIO 及 "
-"GStreamer)。"
-
-#: data/app.appdata.xml.in:26
-msgid ""
-"Fast loading and parsing thousands of music files in very few seconds, "
-"monitor local changes."
-msgstr "在幾秒鐘內快速載入和解析數以千計的音樂檔案，監控本機變更。"
-
-#: data/app.appdata.xml.in:27
-msgid ""
-"Low memory usage for large music collection with album covers (embedded and "
-"external), no thumbnail caches to store."
-msgstr ""
-"對於包含專輯封面 (內嵌與外接) 的大型音樂收藏，記憶體使用量低，無須儲存縮圖快"
-"取。"
-
-#: data/app.appdata.xml.in:28
-msgid ""
-"Group and sorts by album/artist/title, shuffle list, full-text searching."
-msgstr "依專輯/歌手/標題分類與排序、隨機播放清單、全文檢索。"
-
-#: data/app.appdata.xml.in:29
-msgid ""
-"Fluent adaptive user interface for different screen (Desktop, Tablet, "
-"Mobile)."
-msgstr ""
-"適用於不同螢幕 (桌上型電腦、平板電腦、行動裝置) 的流暢自適應使用者介面。"
-
-#: data/app.appdata.xml.in:30
-msgid "Gaussian blurred cover as background, follows GNOME light/dark mode."
-msgstr "高斯模糊封面作為背景，遵循 GNOME 明暗模式。"
-
-#: data/app.appdata.xml.in:31
-msgid "Drag-drop from GNOME Files, showing music in Files."
-msgstr "從 GNOME 檔案拖放、顯示檔案中的音樂。"
-
-#: data/app.appdata.xml.in:32
-msgid "Supports audio peaks visualizer."
-msgstr "支援音訊峰值顯示器。"
-
-#: data/app.appdata.xml.in:33
-msgid "Supports gapless playback."
-msgstr "支援無間隙播放。"
-
-#: data/app.appdata.xml.in:34
-msgid "Supports normalizing volume with ReplayGain."
-msgstr "支援使用 ReplayGain 將音量正常化。"
-
-#: data/app.appdata.xml.in:35
-msgid "Supports PipeWire and other audio sink."
-msgstr "支援 PipeWire 和其它音訊匯流排。"
-
-#: data/app.appdata.xml.in:36
-msgid "Supports MPRIS control."
-msgstr "支援 MPRIS 控制。"
-
-#: data/app.appdata.xml.in:47
-msgid "Main window"
-msgstr "主視窗"
-
-#: data/app.appdata.xml.in:51
-msgid "Albums view"
-msgstr "專輯檢視"
-
-#: data/app.appdata.xml.in:55
-msgid "Playing view"
-msgstr "正在播放檢視"
-
-#: data/app.appdata.xml.in:59
-msgid "Playlist view"
-msgstr "播放清單檢視"
 
 #: data/app.desktop.in:4
 msgid "Music Player"
@@ -130,6 +37,99 @@ msgstr "播放音樂"
 msgid "music;sound;player;media;audio;playlist;"
 msgstr ""
 "music;sound;player;media;audio;playlist;音樂;聲音;播放器;媒體;音訊;播放列表"
+
+#: data/app.metainfo.xml.in:7
+msgid "Play your music elegantly"
+msgstr "優雅地播放您的音樂"
+
+#: data/app.metainfo.xml.in:22
+msgid ""
+"Gapless (AKA: G4Music) is a light weight music player written in GTK4, "
+"focuses on large music collection."
+msgstr ""
+"無暇 (又名: G4Music) 是以 GTK4 寫成的輕量級音樂播放器，專注於大型音樂收藏。"
+
+#: data/app.metainfo.xml.in:23
+msgid "Features"
+msgstr "特點"
+
+#: data/app.metainfo.xml.in:25
+msgid ""
+"Supports most music file types, Samba and any other remote protocols "
+"(depends on GIO and GStreamer)."
+msgstr ""
+"支援大多數音樂檔案類型、Samba 及任何其他遠端通訊協定 (取決於 GIO 及 "
+"GStreamer)。"
+
+#: data/app.metainfo.xml.in:26
+msgid ""
+"Fast loading and parsing thousands of music files in very few seconds, "
+"monitor local changes."
+msgstr "在幾秒鐘內快速載入和解析數以千計的音樂檔案，監控本機變更。"
+
+#: data/app.metainfo.xml.in:27
+msgid ""
+"Low memory usage for large music collection with album covers (embedded and "
+"external), no thumbnail caches to store."
+msgstr ""
+"對於包含專輯封面 (內嵌與外接) 的大型音樂收藏，記憶體使用量低，無須儲存縮圖快"
+"取。"
+
+#: data/app.metainfo.xml.in:28
+msgid ""
+"Group and sorts by album/artist/title, shuffle list, full-text searching."
+msgstr "依專輯/歌手/標題分類與排序、隨機播放清單、全文檢索。"
+
+#: data/app.metainfo.xml.in:29
+msgid ""
+"Fluent adaptive user interface for different screen (Desktop, Tablet, "
+"Mobile)."
+msgstr ""
+"適用於不同螢幕 (桌上型電腦、平板電腦、行動裝置) 的流暢自適應使用者介面。"
+
+#: data/app.metainfo.xml.in:30
+msgid "Gaussian blurred cover as background, follows GNOME light/dark mode."
+msgstr "高斯模糊封面作為背景，遵循 GNOME 明暗模式。"
+
+#: data/app.metainfo.xml.in:31
+msgid "Drag-drop from GNOME Files, showing music in Files."
+msgstr "從 GNOME 檔案拖放、顯示檔案中的音樂。"
+
+#: data/app.metainfo.xml.in:32
+msgid "Supports audio peaks visualizer."
+msgstr "支援音訊峰值顯示器。"
+
+#: data/app.metainfo.xml.in:33
+msgid "Supports gapless playback."
+msgstr "支援無間隙播放。"
+
+#: data/app.metainfo.xml.in:34
+msgid "Supports normalizing volume with ReplayGain."
+msgstr "支援使用 ReplayGain 將音量正常化。"
+
+#: data/app.metainfo.xml.in:35
+msgid "Supports PipeWire and other audio sink."
+msgstr "支援 PipeWire 和其它音訊匯流排。"
+
+#: data/app.metainfo.xml.in:36
+msgid "Supports MPRIS control."
+msgstr "支援 MPRIS 控制。"
+
+#: data/app.metainfo.xml.in:47
+msgid "Main window"
+msgstr "主視窗"
+
+#: data/app.metainfo.xml.in:51
+msgid "Albums view"
+msgstr "專輯檢視"
+
+#: data/app.metainfo.xml.in:55
+msgid "Playing view"
+msgstr "正在播放檢視"
+
+#: data/app.metainfo.xml.in:59
+msgid "Playlist view"
+msgstr "播放清單檢視"
 
 #: src/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
@@ -191,7 +191,8 @@ msgctxt "shortcut window"
 msgid "Reload Library"
 msgstr "更新音樂庫"
 
-#: src/gtk/play-panel.ui:16 src/ui/store-panel.vala:368
+#: src/gtk/play-panel.ui:16 src/ui/music-list.vala:610
+#: src/ui/store-panel.vala:413
 msgid "Back"
 msgstr "返回"
 
@@ -215,7 +216,7 @@ msgstr "緊湊播放列表"
 msgid "Grid view for artists/albums"
 msgstr "藝術家/專輯使用網格檢視"
 
-#: src/gtk/preferences.ui:56 src/application.vala:400
+#: src/gtk/preferences.ui:56 src/application.vala:414
 msgid "Keep playing after window closed"
 msgstr "關閉視窗後繼續播放"
 
@@ -271,7 +272,7 @@ msgstr "首選音訊匯流排"
 msgid "Main Menu"
 msgstr "主選單"
 
-#: src/gtk/store-panel.ui:29
+#: src/gtk/store-panel.ui:29 src/ui/dialogs.vala:75
 msgid "Search"
 msgstr "搜尋"
 
@@ -283,115 +284,191 @@ msgstr "排序"
 msgid "_Reload Library"
 msgstr "更新音樂庫(_R)"
 
-#: src/gtk/store-panel.ui:65
+#: src/gtk/store-panel.ui:63
+msgid "_Select"
+msgstr "選擇(_S)"
+
+#: src/gtk/store-panel.ui:69
 msgid "_Preferences"
 msgstr "偏好設定(_P)"
 
-#: src/gtk/store-panel.ui:69
+#: src/gtk/store-panel.ui:73
 msgid "_Keyboard Shortcuts"
 msgstr "快捷鍵(_K)"
 
-#: src/gtk/store-panel.ui:73
+#: src/gtk/store-panel.ui:77
 msgid "_About"
 msgstr "關於(_A)"
 
-#: src/gtk/store-panel.ui:82 src/ui/preferences.vala:67
+#: src/gtk/store-panel.ui:86 src/ui/preferences.vala:67
 msgid "Album"
 msgstr "專輯"
 
-#: src/gtk/store-panel.ui:87
+#: src/gtk/store-panel.ui:91
 msgid "Artist"
 msgstr "藝術家"
 
-#: src/gtk/store-panel.ui:92
+#: src/gtk/store-panel.ui:96
 msgid "Artist/Album"
 msgstr "藝術家/專輯"
 
-#: src/gtk/store-panel.ui:97
+#: src/gtk/store-panel.ui:101
 msgid "Title"
 msgstr "歌名"
 
-#: src/gtk/store-panel.ui:102
+#: src/gtk/store-panel.ui:106
 msgid "Recent"
 msgstr "最近"
 
-#: src/gtk/store-panel.ui:107
+#: src/gtk/store-panel.ui:111
 msgid "Shuffle"
 msgstr "亂序播放"
 
-#: src/action-handles.vala:184
+#: src/action-handles.vala:95
+msgid "Image Files"
+msgstr "圖像檔案"
+
+#: src/action-handles.vala:102
+msgid "Export cover successfully"
+msgstr "輸出封面成功"
+
+#: src/action-handles.vala:102
+msgid "Export cover failed"
+msgstr "輸出封面失败"
+
+#: src/action-handles.vala:186
 msgid "A fast, fluent, light weight music player written in GTK4."
 msgstr "一個快速、流暢、輕量，基於 GTK4 的音樂播放軟體。"
 
 #. Translators: Replace "translator-credits" with your names, one name per line
-#: src/action-handles.vala:186
+#: src/action-handles.vala:188
 msgid "translator-credits"
 msgstr ""
 "Julian\n"
 "Nanling"
 
-#: src/application.vala:602
+#: src/application.vala:318
+msgid "Save playlist failed"
+msgstr "儲存播放清單失敗"
+
+#: src/application.vala:436
+msgid "Playlist Files"
+msgstr "播放清單檔案"
+
+#: src/application.vala:450
+msgid "Save playlist successfully"
+msgstr "儲存播放清單成功"
+
+#: src/application.vala:629
 msgid "Keep playing"
 msgstr "持續播放"
 
+#: src/ui/dialogs.vala:50 src/ui/music-list.vala:646
+msgid "Add to Playlist"
+msgstr "加入播放清單"
+
+#: src/ui/dialogs.vala:55
+msgid "New Playlist"
+msgstr "新建播放清單"
+
+#: src/ui/dialogs.vala:62
+msgid "Close"
+msgstr "关闭"
+
+#: src/ui/dialogs.vala:127 src/ui/store-panel.vala:662
+#, c-format
+msgid "No playlist found in %s"
+msgstr "在 %s 中找不到播放清單"
+
+#: src/ui/dialogs.vala:322 src/ui/dialogs.vala:334
+msgid "No"
+msgstr "否"
+
+#: src/ui/dialogs.vala:323 src/ui/dialogs.vala:334
+msgid "Yes"
+msgstr "是"
+
+#: src/ui/music-list.vala:262
+msgid "Playlist is modified, save it?"
+msgstr "播放清單已修改，要儲存嗎？"
+
 #. Translators: Play this music at next position of current playing music
-#: src/ui/music-widgets.vala:211 src/ui/music-widgets.vala:252
-#: src/ui/music-widgets.vala:262
+#: src/ui/music-list.vala:390 src/ui/music-list.vala:407
+#: src/ui/music-list.vala:632 src/ui/music-widgets.vala:219
+#: src/ui/music-widgets.vala:230
 msgid "Play at Next"
 msgstr "插播"
 
-#: src/ui/music-widgets.vala:212 src/ui/music-widgets.vala:251
-#: src/ui/music-widgets.vala:261 src/ui/store-panel.vala:373
-msgid "Play"
-msgstr "播放"
+#: src/ui/music-list.vala:392 src/ui/music-list.vala:405
+#: src/ui/music-list.vala:639 src/ui/music-widgets.vala:220
+#: src/ui/music-widgets.vala:231
+msgid "Add to Queue"
+msgstr "加入列隊"
 
-#: src/ui/music-widgets.vala:215 src/ui/play-panel.vala:125
+#: src/ui/music-list.vala:393 src/ui/music-widgets.vala:221
+#: src/ui/music-widgets.vala:232 src/ui/music-widgets.vala:245
+msgid "Add to Playlist…"
+msgstr "加入播放清單…"
+
+#: src/ui/music-list.vala:394 src/ui/music-list.vala:625
+msgid "Remove"
+msgstr "移除"
+
+#: src/ui/music-list.vala:410 src/ui/play-panel.vala:145
 msgid "Show _Cover File"
 msgstr "顯示封面檔案(_C)"
 
-#: src/ui/music-widgets.vala:217 src/ui/play-panel.vala:127
+#: src/ui/music-list.vala:412 src/ui/play-panel.vala:147
 msgid "_Export Cover"
 msgstr "輸出封面(_E)"
 
-#: src/ui/music-widgets.vala:254
+#: src/ui/music-list.vala:614
+msgid "Select All"
+msgstr "全選"
+
+#: src/ui/music-widgets.vala:223
 msgid "Show List File"
 msgstr "顯示清單檔案"
 
-#: src/ui/music-widgets.vala:268 src/ui/play-panel.vala:59
+#: src/ui/music-widgets.vala:238 src/ui/play-panel.vala:60
 msgid "Search Title"
 msgstr "搜尋歌名"
 
-#: src/ui/music-widgets.vala:269 src/ui/play-panel.vala:57
+#: src/ui/music-widgets.vala:239 src/ui/play-panel.vala:58
 msgid "Search Album"
 msgstr "搜尋專輯"
 
-#: src/ui/music-widgets.vala:270 src/ui/play-panel.vala:58
+#: src/ui/music-widgets.vala:240 src/ui/play-panel.vala:59
 msgid "Search Artist"
 msgstr "搜尋藝術家"
 
-#: src/ui/music-widgets.vala:271
+#: src/ui/music-widgets.vala:242
+msgid "Show _Tags…"
+msgstr "顯示標籤(_T)..."
+
+#: src/ui/music-widgets.vala:243
 msgid "_Show Music File"
 msgstr "顯示音樂檔案(_S)"
 
 #. Translators: single loop the current music
-#: src/ui/play-bar.vala:74
+#: src/ui/play-bar.vala:72
 msgid "Single Loop"
 msgstr "單曲迴圈"
 
-#: src/ui/play-bar.vala:84
+#: src/ui/play-bar.vala:82
 msgid "Play Previous"
 msgstr "播放上一首"
 
 #. media-playback-pause-symbolic
-#: src/ui/play-bar.vala:90
+#: src/ui/play-bar.vala:88
 msgid "Play/Pause"
 msgstr "播放/暫停"
 
-#: src/ui/play-bar.vala:97
+#: src/ui/play-bar.vala:95
 msgid "Play Next"
 msgstr "播放下一首"
 
-#: src/ui/play-panel.vala:246
+#: src/ui/play-panel.vala:264
 msgid ""
 "Drag and drop music files here,\n"
 "or change music location: "
@@ -415,31 +492,35 @@ msgstr "僅封面"
 msgid "Track"
 msgstr "曲目"
 
-#: src/ui/store-panel.vala:72
+#: src/ui/store-panel.vala:82
 msgid "Playing"
 msgstr "正在播放"
 
-#: src/ui/store-panel.vala:77
+#: src/ui/store-panel.vala:86
 msgid "Artists"
 msgstr "藝術家"
 
-#: src/ui/store-panel.vala:82
+#: src/ui/store-panel.vala:90
 msgid "Albums"
 msgstr "專輯"
 
-#: src/ui/store-panel.vala:87
+#: src/ui/store-panel.vala:94
 msgid "Playlists"
 msgstr "播放清單"
 
-#: src/ui/store-panel.vala:570
-msgid "No playlist found"
-msgstr "未找到播放清單"
+#: src/ui/store-panel.vala:421
+msgid "Play"
+msgstr "播放"
 
 #. Translators: Current volume percent: 0~100%
 #: src/ui/volume-button.vala:33
 #, c-format
 msgid "Volume %d%%"
 msgstr "音量 %d%%"
+
+#: src/ui/window.vala:110
+msgid "Show"
+msgstr "顯示"
 
 #: src/utils/music.vala:2
 msgid "Unknown Album"
@@ -448,3 +529,7 @@ msgstr "未知專輯"
 #: src/utils/music.vala:3
 msgid "Unknown Artist"
 msgstr "未知藝術家"
+
+#, fuzzy, c-format
+#~ msgid "No playlist found in: %s"
+#~ msgstr "未找到播放清單"
